--- a/composer.json
+++ b/composer.json
@@ -9,6 +9,7 @@
         "fruitcake/laravel-cors": "^2.0",
         "guzzlehttp/guzzle": "^7.0.1",
         "jeroennoten/laravel-adminlte": "^3.8",
+        "laravel-lang/lang": "9.0",
         "laravel/framework": "^8.75",
         "laravel/jetstream": "^2.7",
         "laravel/sanctum": "^2.11",
