--- a/composer.json
+++ b/composer.json
@@ -18,7 +18,8 @@
         "livewire/livewire": "^2.5",
         "maatwebsite/excel": "^3.1",
         "spatie/laravel-backup": "^6.16",
-        "spatie/laravel-permission": "^5.5"
+        "spatie/laravel-permission": "^5.5",
+        "fakerphp/faker": "^1.9.1",
     },
     "require-dev": {
         "facade/ignition": "^2.5",
