--- a/composer.json
+++ b/composer.json
@@ -19,7 +19,7 @@
         "maatwebsite/excel": "^3.1",
         "spatie/laravel-backup": "^6.16",
         "spatie/laravel-permission": "^5.5",
-        "fakerphp/faker": "^1.9.1",
+        "fakerphp/faker": "^1.9.1"
     },
     "require-dev": {
         "facade/ignition": "^2.5",
