--- a/composer.json
+++ b/composer.json
@@ -15,11 +15,11 @@
         "laravel/jetstream": "^2.7",
         "laravel/sanctum": "^2.11",
         "laravel/tinker": "^2.5",
+        "league/flysystem-aws-s3-v3": "1.0.29",
         "livewire/livewire": "^2.5",
         "maatwebsite/excel": "^3.1",
         "spatie/laravel-backup": "^6.16",
-        "spatie/laravel-permission": "^5.5",
-        "fakerphp/faker": "^1.9.1"
+        "spatie/laravel-permission": "^5.5"
     },
     "require-dev": {
         "facade/ignition": "^2.5",
